react/App.css
body {
	margin: 0px;
}

.content-padding {
	padding: 10px;
}

/*For Image Preview*/
.preview-text { 
  flex-grow: 1;
  position: absolute;
  display: block;
  bottom: 12%; 
  left: 30%;
  right: 30%;
  width: 40%;
}
.toolbar-wrapper {
  position: fixed;
  bottom: 68px;
  left: 50%;
  padding: 0px 24px;
  color: #fff;
  font-size: 20px;
  background-color: rgba(0, 0, 0, 0.1);
  border-radius: 100px;
  transform: translateX(-50%);
}

.toolbar-wrapper .anticon {
  padding: 12px;
  cursor: pointer;
}

.toolbar-wrapper .anticon[disabled] {
  cursor: not-allowed;
  opacity: 0.3;
}

.toolbar-wrapper .anticon:hover {
  opacity: 0.3;
}

#global {
  height: 100vh;
}
#header {
  height: 45px;
  background-color: orange;
}
#content {	
  height: calc(100% - (45px + 30px));
  overflow-y: auto;
}
#footer {
  height: 30px;
  background-color: rgb(0 21 41);
  color: white;
}

